# cat-flap

./: .dockerignore  .gitignore  Dockerfile  preprocess.ipynb  pyproject.toml  rpi-trixie.Dockerfile  test.ipynb  test_yolo.ipynb  train_bin.ipynb  train_yolo.ipynb
.github/actions/build-service/: action.yaml
.github/workflows/: build-and-push-diodes.yaml  build-and-push-hub.yaml  build-and-push-image-capturer.yaml  build-and-push-image-saver.yaml  build-and-push-inference.yaml  build-and-push-logger.yaml  build-and-push-logic.yaml  build-and-push-movement-detector.yaml  build-and-push-servo.yaml  build-and-push.yaml  build-trixie.yaml
.templates/groups/: worker-service.json
.templates/templates/python-version-file/: meta.json
.templates/templates/service-build-action/: content  meta.json
.templates/templates/worker-main-file/: content  meta.json
diodes-service/: main.py  pyproject.toml
hub-service/: main.py  pyproject.toml
image-capturer-service/: Dockerfile  main.py  pyproject.toml
image-saver-service/: main.py  pyproject.toml
inference-service/: Dockerfile  main.py  pyproject.toml  weights.Dockerfile
logger-service/: main.py  pyproject.toml
logic-service/: main.py  pyproject.toml
movement-detector-service/: Dockerfile  main.py  pyproject.toml
scripts/: create-temp-pyproject.py  pyproject.toml
servo-service/: Dockerfile  main.py  pyproject.toml  servo.py
shared/: hub.py  logging.py  messages.py  pyproject.toml
shared/src/shared/: hub.py  logging.py  (+2 more)
train/: preprocess2.ipynb  pyproject.toml  test_yolo.ipynb  train.ipynb  train_yolo.ipynb
(+3 files in other folders)
