[project]
name = "cat-flap"
version = "0.1.0"
description = "Cat flap project"
requires-python = ">=3.10"
dependencies = []

[tool.uv.sources]
diodes-service = { workspace = true }
hub-service = { workspace = true }
image-saver-service = { workspace = true }
inference-service = { workspace = true }
logger-service = { workspace = true }
logic-service = { workspace = true }
movement-detector-service = { workspace = true }
servo-service = { workspace = true }
shared = { workspace = true }

[tool.uv.workspace]
members = [
  "./*-service",
  "./shared",
]
exclude = ["train"]

[tool.uv]
dev-dependencies = [
  "diodes-service",
  "hub-service",
  "image-saver-service",
  "inference-service",
  "logger-service",
  "logic-service",
  "movement-detector-service",
  "servo-service",
  "shared",
]
package = false
